--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,19 @@
 ## LOGGER ##
 logging.level.root=INFO
 
-## H2 CONSOLE ##
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+## DATABASE TESTE AMAZON##
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.database.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://database-agex.cpkllfxhpegq.us-east-2.rds.amazonaws.com:5432/postgres
+spring.datasource.username=age
+spring.datasource.password=agendamento123
+server.port=8080
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 ## DATA REST ##
 spring.data.rest.base-path=/api
