ajustes do servicoes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,15 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
 spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://database-agex.cpkllfxhpegq.us-east-2.rds.amazonaws.com:5432/postgres
 spring.datasource.username=age
 spring.datasource.password=agendamento123
 server.port=8080
 
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 ## DATA REST ##
 spring.data.rest.base-path=/api
