--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ logging.level.root=INFO
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://database-agex.cpkllfxhpegq.us-east-2.rds.amazonaws.com:5432/postgres
 spring.datasource.username=age
